--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: execute py script
         run: |
-          python runner.py .\packages
+          python runner.py packages
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add apps.xlsx
