--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add apps.xlsx
-          git commit -m "crongenerated"
+          git commit -m "chore: apps parsed"
           git push
