--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,6 @@ jobs:
           git config user.email github-actions@github.com
           git add apps.xlsx
           git commit -m "chore: apps parsed"
+          git push
           git tag -f latest
           git push origin --tags
